--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -6,7 +6,7 @@
     <filter-class>com.oo.businessplan.common.filter.CorsFilter</filter-class>
     <init-param>
       <param-name>allowOrigin</param-name>
-      <param-value>http://localhost:8080</param-value>
+      <param-value>http://localhost:8080,http://localhost:8082</param-value>
     </init-param>
     <init-param>
       <param-name>allowMethods</param-name>
