--- a/src/main/resources/conf.properties
+++ b/src/main/resources/conf.properties
@@ -1,6 +1,6 @@
 # properties
 driver=com.mysql.jdbc.Driver
-#url=jdbc:mysql://localhost:3306/oobsinessplan?useUnicode=true&characterEncoding=utf-8&rewriteBatchedStatements=true&useSSL=false&serverTimezone=Hongkong&zeroDateTimeBehavior=convertToNull
+#url=jdbc:mysql://localhost:3306/oobusinessplan?autoReconnect=true&useUnicode=true&characterEncoding=utf-8&rewriteBatchedStatements=true&useSSL=false&serverTimezone=Hongkong&zeroDateTimeBehavior=convertToNull
 url=jdbc:mysql://39.97.99.250:3306/oobusinessplan?autoReconnect=true&useUnicode=true&characterEncoding=utf-8&rewriteBatchedStatements=true&useSSL=false&serverTimezone=Hongkong&zeroDateTimeBehavior=convertToNull
 #username=root
 #password=newpw
