--- a/pom.xml
+++ b/pom.xml
@@ -6,6 +6,7 @@
   <packaging>war</packaging>
   <properties>
       <mybatis></mybatis>
+      <security.version>4.2.12.RELEASE</security.version> 
   </properties>
  
   <dependencies>
@@ -178,6 +179,33 @@
       <artifactId>springfox-swagger-ui</artifactId>
       <version>2.7.0</version>
     </dependency>
+    
+    <!-- spring-security -->
+    <dependency>
+			<groupId>org.springframework.security</groupId>
+			<artifactId>spring-security-web</artifactId>
+			<version>${security.version}</version>
+		</dependency>
+	    <dependency>
+			<groupId>org.springframework.security</groupId>
+			<artifactId>spring-security-core</artifactId>
+			<version>${security.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.security</groupId>
+			<artifactId>spring-security-config</artifactId>
+			<version>${security.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.security</groupId>
+			<artifactId>spring-security-cas</artifactId>
+			<version>${security.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.security</groupId>
+			<artifactId>spring-security-openid</artifactId>
+			<version>${security.version}</version>
+		</dependency>
     
     <!-- 发送邮件功能 -->
     <dependency>
