--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -6,7 +6,7 @@
     <filter-class>com.oo.businessplan.common.filter.CorsFilter</filter-class>
     <init-param>
       <param-name>allowOrigin</param-name>
-      <param-value>http://localhost:8080,http://localhost:8082</param-value>
+      <param-value>http://localhost:8080,http://localhost:8082,http://192.168.188.123:8083</param-value>
     </init-param>
     <init-param>
       <param-name>allowMethods</param-name>
@@ -35,6 +35,7 @@
       <param-value>true</param-value>
     </init-param>
   </filter>
+  
   <filter-mapping>
     <filter-name>corsFilter</filter-name>
     <url-pattern>/*</url-pattern>
