--- a/src/main/resources/conf.properties
+++ b/src/main/resources/conf.properties
@@ -13,10 +13,12 @@ maxactive=20
 #redis.host=127.0.0.1
 redis.host=39.97.99.250
 redis.port=6379
-redis.pass=
+redis.pass=cyz123
+#===  now the password in redis is not set when you deploy the project please set the password for redis
 redis.maxIdle=100
 redis.maxWait=-1
 redis.testOnBorrow=false
+redis.databaseIndex=0
 
 #===========wx==============
 wxpay.appid=
