--- a/src/main/resources/conf.properties
+++ b/src/main/resources/conf.properties
@@ -1,7 +1,7 @@
 # properties
 driver=com.mysql.jdbc.Driver
 #url=jdbc:mysql://localhost:3306/oobusinessplan?autoReconnect=true&useUnicode=true&characterEncoding=utf-8&rewriteBatchedStatements=true&useSSL=false&serverTimezone=Hongkong&zeroDateTimeBehavior=convertToNull
-url=jdbc:mysql://39.97.99.250:3306/oobusinessplan?autoReconnect=true&useUnicode=true&characterEncoding=utf-8&rewriteBatchedStatements=true&useSSL=false&serverTimezone=Hongkong&zeroDateTimeBehavior=convertToNull
+url=jdbc:mysql://39.97.99.250:3306/oobusinessplan?autoReconnect=true&useUnicode=true&characterEncoding=utf-8&rewriteBatchedStatements=true&useSSL=false&serverTimezone=Asia/Shanghai&zeroDateTimeBehavior=convertToNull
 #username=root
 #password=newpw
 username=cyz
