--- a/pom.xml
+++ b/pom.xml
@@ -103,6 +103,13 @@
       <artifactId>aspectjtools</artifactId>
       <version>1.8.9</version>
     </dependency>
+    
+    <!-- 时钟任务 -->
+	<dependency>
+		<groupId>org.quartz-scheduler</groupId>
+		<artifactId>quartz</artifactId>
+		<version>2.3.0</version>
+	</dependency>
 
  <dependency>
   <groupId>commons-dbcp</groupId>
