--- a/src/main/resources/conf.properties
+++ b/src/main/resources/conf.properties
@@ -9,11 +9,11 @@ password=cyz1996224
 init=5
 maxactive=20
 
-#-----------------redis
-#redis.host=127.0.0.1
-redis.host=39.97.99.250
+#-----------------redi
+redis.host=127.0.0.1
+#redis.host=39.97.99.250
 redis.port=6379
-redis.pass=cyz123
+redis.pass=CYZ_IGZ.42204991
 #===  now the password in redis is not set when you deploy the project please set the password for redis
 redis.maxIdle=100
 redis.maxWait=-1
